--- a/CUMUM.tex
+++ b/CUMUM.tex
@@ -22,6 +22,12 @@
 \memberb{张荣祚}
 \memberc{杨自豪}
 \supervisor{张海珍}
+\baominghao{}
+\schoolname{}
+\membera{}
+\memberb{}
+\memberc{}
+\supervisor{}
 \yearinput{2020}
 \monthinput{5}
 \dayinput{5}
